style.css
* {
  margin: 0;
  padding: 0;
}

.aboutme {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 700px;
  opacity: 0;
  transition: all 1s ease-out;
}

.aboutme.fade-in {
  opacity: 1;
}

.aboutme > p {
  letter-spacing: 2px;
  text-align: center;
  padding: 0 100px;
  line-height: 2;
}

#arrow {
  width: 90px;
  height: 70px;
  margin: 0 auto;
}

body {
  background-color: rgb(255, 255, 255);
  margin: 0;
  padding: 0;
  /*font-family: 'Open Sans Condensed', sans-serif;*/
  font-family: 'Josefin Sans', sans-serif;
  color: #808589;
  height: 100%;
}

.content-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  z-index: 2;
  color: white;
}

.content-container > h1{
  z-index: 2;
  font-size: 80px;
  margin: 0;
  text-shadow: 1px 1px 1px gray;
  text-align: center;
}

.content-container > p {
  z-index: 2;
  font-size: 20px;
  letter-spacing: 1.5px;
  margin: 0;
  padding: 50px 150px 0 150px;
  text-align: center;
}

#content1 > h1 {
  font-family: 'Bungee Outline', cursive;
}

#email-logo, #linked-in {
  border-radius: 10px;
}

footer {
  height: 25vh;
  background-image: url(http://media.istockphoto.com/photos/brick-wall-picture-id497944862?k=6&m=497944862&s=170667a&w=0&h=fOEorpNTRb6cYJeTSJu7hSWhrCuTUOAIlF9F96yrhI8=);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 0;
}

footer a {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

footer img {
  display: relative;
  margin-left: auto;
  margin-right: auto;
  max-width: 50%;
  max-height: 50%;
  padding: 0 20px;
  opacity: 0.8;
}

#foot-github {
  max-width: 58%;
  max-height: 58%;
}

header {
  position: fixed;
  height: 60px;
  top: -100px;
  left: 0;
  width: 100%;
  z-index: 10000;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  -webkit-transition: 1.5s ease-in-out;
  -moz-transition: 1.5s ease-in-out;
  -o-transition: 1.5s ease-in-out;
  transition: 1.5s ease-in-out;
}

header.slideIn {
  -webkit-transform: translateY(100px);
  -moz-transform: translateY(100px);
  -o-transform: translateY(100px);
  -ms-transform: translateY(100px);
  transform: translateY(100px);
  }

.header > p {
  padding: 20px;
  letter-spacing: 3px;
}

.header > p:hover {
  cursor: pointer;
}

.hidden-links {
  display: none;
}

.icons {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 100px;
  margin-top: 10px;
}

.icons > a {
  height: 100%;
}

.icons > a > img {
  display: relative;
  margin-left: auto;
  margin-right: auto;
  max-width: 70%;
  max-height: 70%;
  padding: 5px 5px;
  opacity: 0;
  -webkit-transform: translate3d(0, 100%, 0);
  transform: translate3d(0, 100%, 0);
  z-index: 9999;
}

/* Overlay for each project photo container */
.image-container {
  height:100%;
  width: 100%;
  opacity: 0.9;
  z-index: 1;
  margin-top: -500px;
  overflow: hidden;
}

.image-container > img {
  width: 102%;
  height: 150%;
  z-index: 1;
  -webkit-filter: blur(5px);
  -moz-filter: blur(5px);
  -o-filter: blur(5px);
  -ms-filter: blur(5px);
  filter: blur(5px);
}

/* Parallax background */
.land {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  z-index: 1;
  padding-top: 100px;
  opacity: 1;
  transition: all 1s ease-out;
}

.land.fade-out {
  opacity: 0;
}

.land > h3 {
  margin: 0;
  padding: 0;
  font-size: 15px;
  color: gray;
  letter-spacing: 5px;
}

.mobile-links {
  display: none;
}

#name {
  font-size: 30px;
  color: #000000;
  margin: 0;
  padding-top: 150px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  letter-spacing: 5px;
}

.overlay {
  position: absolute;
  top: 0px;
  width: 100%;
  height: 100%;
  margin-left: 0px;
  margin-right: 0px;
  background-color: rgb(225, 229, 237);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  -webkit-opacity: 0;
  -moz-opacity: 0;
  opacity: 0;
  -webkit-transition: all 0.7s ease;
  -moz-transition: all 0.7s ease;
  -ms-transition: all 0.7s ease;
  -o-transition: all 0.7s ease;
  transition: all 0.7s ease;
}

.overlay:hover {
  -webkit-opacity: 1;
  -moz-opacity: 1;
  opacity: 0.95;
}

.overlay > p {
  font-size: 25px;
  margin: 10px;
  color: black;
  letter-spacing: 2px;
}

.overlay > a {
  font-size: 25px;
  border: 1px solid white;
  margin: 12px;
  padding: 2px 20px 4px 20px;
  text-decoration: none;
  color: white;
  letter-spacing: 2px;
  text-align: center;
}

.overlay > a:hover {
  background-color: white;
  color: gray;
}

.project-container {
  height: 500px;
}

.project-container.parallax {
  text-align: center;
  position: relative;
  overflow: hidden;
}

.project-info {
  height: 600px;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0;
  transform: translateY(50px);
  transition: all 1s ease-out;
}

.project-info.fade-in {
  opacity: 1;
  transform: translateY(0);
}

.project-img {
  height: 42%;
  width: 28%;
  margin: 30px;
  overflow: hidden;
  position: relative;
}

#project3-info > .project-img {
  height: 52%;
  width: 40%;
  margin: 50px;
}

.project-img > img {
  width: 101%;
  height: 101%;
}

.project-img > img:hover {
  -webkit-filter: blur(2px);
  -moz-filter: blur(2px);
  -o-filter: blur(2px);
  -ms-filter: blur(2px);
  filter: blur(2px);
  opacity: 0.7;
}

.project-container.fade-in {
  opacity: 1;
  transform: translateY(0);
}

#scroll-div {
  position: absolute;
  opacity: 0;
  -webkit-transform: translate3d(0, 100%, 0);
  transform: translate3d(0, 100%, 0);
  z-index: -1;
  top: 60px;
}

#scroll-div > p {
  margin: 10px 50px 10px 35px;
}

.slide-up {
  opacity: 0;
  transform: translateY(50px);
  transition: all 0.8s ease-in-out;
}

.slide-up.fade-in {
  opacity: 1;
  transform: translateY(0);
}

.technology {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0 30px 0 20px;
}

.technology > h2 {
  margin: 5px;
}

.technology > p {
  margin: 5px;
  font-size: 20px;
  color: gray;
  text-align: center;
}

/* Shine.js in header */
.thomas {
  margin: auto;
  position: absolute;
  top: 50px; left: 0; bottom: 250px; right: 650;
  width: 100%;
  display: flex;
  height: auto;
  color: #FAFAFA;
  text-transform: uppercase;
  text-align: center;
  font-size: 7.5em;
  font-family: 'Rock Salt', cursive;
  font-weight: 800;
  letter-spacing: -0.02em;
  line-height: 1.2em;
  background-size: contain;
}

#upick {
  height: 200px;
  width: 200px;
  z-index: 1;
}

@media only screen and (max-width: 1150px) {
  .project-img {
    height: 40%;
    width: 28%;
  }

  #project3-info > .project-img {
    height: 48%;
    width: 40%;
    margin: 50px;
  }
}

@media only screen and (max-width: 900px) {
  .content-container > p {
    padding: 50px 75px 0 75px;
  }

  #project3 > .content-container > p {
    padding: 50px 75px 0 75px;
  }

  .project-info {
    height: 550px;
  }

  .project-img {
    height: 35%;
    width: 29%;
    margin: 20px;
  }

  #project3-info > .project-img {
    height: 44%;
    width: 45%;
  }

  .thomas {
    margin: auto;
    position: absolute;
    top: 50px; left: 0; bottom: 250px; right: 650;
    width: 100%;
    display: flex;
    height: auto;
    color: #FAFAFA;
    text-transform: uppercase;
    text-align: center;
    font-size: 6.5em;
    font-family: 'Rock Salt', cursive;
    font-weight: 800;
    letter-spacing: -0.02em;
    line-height: 1.2em;
    background-size: contain;
  }
}

@media on screen and (max-width:768px) {
  .project-img {
    height: 30%;
    width: 30%;
    margin: 10px;
  }

  #project3-info > .project-img {
    height: 40%;
    width: 50%;
  }

  .technology > p {
    margin: 3px;
    font-size: 18px;
  }

  .thomas {
    margin: auto;
    position: absolute;
    top: 50px; left: 0; bottom: 250px; right: 150px;
    width: 100px;
    display: flex;
    height: auto;
    color: #FAFAFA;
    text-transform: uppercase;
    text-align: center;
    font-size: 5em;
    font-family: 'Rock Salt', cursive;
    font-weight: 800;
    letter-spacing: -0.02em;
    line-height: 1.2em;
    background-size: contain;
  }
}

@media only screen and (max-width: 600px) {
  .content-container > h1 {
    font-size: 65px;
  }

  .hidden-image {
    display: none;
  }

  .hidden-links {
    display: flex;
    flex-direction: column;
  }

  .hidden-links > a {
    font-size: 25px;
    border: 3px solid white;
    margin: 10px;
    padding: 2px 20px 4px 20px;
    text-decoration: none;
    color: white;
    letter-spacing: 2px;
    text-align: center;
  }

  .hidden-links > a:hover {
    background-color: white;
    color: rgb(225, 229, 237);
  }

  .overlay > p, .overlay > a {
    display: none;
  }

  .project-img {
    height: 36%;
    width: 52%;
    margin: 20px;
  }

  #project3-info > .project-img {
    height: 36%;
    width: 52%;
    margin: 20px;
  }

  .technology {
    padding: 0 10px 0 10px;
  }

  .thomas {
    margin: auto;
    position: absolute;
    top: 150px; left: 0; bottom: 250px; right: 350;
    width: 100%;
    display: flex;
    height: auto;
    color: #FAFAFA;
    text-transform: uppercase;
    text-align: center;
    font-size: 4.5em;
    font-family: 'Rock Salt', cursive;
    font-weight: 800;
    letter-spacing: -0.02em;
    line-height: 1.2em;
    background-size: contain;
  }
}

@media only screen and (max-width: 500px) {
  .content-container > p {
    padding: 30px 75px 0 75px;
  }

  .project-img {
    width: 55%;
  }

  #project3-info > .project-img {
    width: 55%;
  }

  #project2 > .content-container > h1 {
    line-height: 1;
  }

  .thomas {
    margin: auto;
    position: absolute;
    top: 150px; left: 0; bottom: 250px; right: 350;
    width: 100%;
    display: flex;
    height: auto;
    color: #FAFAFA;
    text-transform: uppercase;
    text-align: center;
    font-size: 4em;
    font-family: 'Rock Salt', cursive;
    font-weight: 800;
    letter-spacing: -0.02em;
    line-height: 1.2em;
    background-size: contain;
  }
}

@media only screen and (max-width: 400px) {
  .aboutme > p {
    padding: 0 20px;
  }

  .content-container > h1 {
    text-shadow: none;
  }

  .content-container > h1 {
    font-size: 50px;
  }

  .content-container > p {
    padding: 15px 30px 20px 30px;
    font-size: 19px;
  }

  .hidden-image {
    display: flex;
  }

  .hidden-links {
    display: none;
  }

  .mobile-links {
    display: flex;
    align-items: center;
    justify-content: space-around;
  }

  .mobile-links > a {
    font-size: 25px;
    border: 1px solid gray;
    margin: 10px;
    padding: 2px 20px 4px 20px;
    text-decoration: none;
    color: gray;
    letter-spacing: 2px;
    text-align: center;
  }

  .mobile-links > a:hover {
    background-color: rgb(225, 229, 237);
    color: white;
  }

  .overlay {
    display: none;
  }

  .project-info {
    flex-direction: column;
    height: 700px;
    padding: 60px 0;
  }

  #project3-info {
    height: 500px;
  }

  .project-img {
    height: 30%;
    width: 70%;
    margin: 15px;
  }

  #project3-info > .project-img {
    height: 50%;
    width: 65%;
    margin: 15px;
  }

  #project3 > .content-container > p {
    padding: 15px 30px 20px 30px;
    font-size: 19px;
  }

  #project2-info {
    flex-direction: column-reverse;
  }

  .technology {
    margin-bottom: 30px;
  }

  .thomas {
    margin: auto;
    position: absolute;
    top: 150px; left: 0; bottom: 250px; right: 350;
    width: 100%;
    display: flex;
    height: auto;
    color: #FAFAFA;
    text-transform: uppercase;
    text-align: center;
    font-size: 3.5em;
    font-family: 'Rock Salt', cursive;
    font-weight: 800;
    letter-spacing: -0.02em;
    line-height: 1.2em;
    background-size: contain;
  }
}

